made the berkeley centric page

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -10,3 +10,8 @@
 
    [connections.gsheets_admin]
    spreadsheet = "https://docs.google.com/spreadsheets/d/1l4rfoVXf4hEED5JMQRtG6ueQk-Y0g0J2S9e9Tszz148/edit?gid=1726492923#gid=1726492923"
+
+   [connections.gsheets_berkeley]
+   spreadsheet = "https://docs.google.com/spreadsheets/d/1l4rfoVXf4hEED5JMQRtG6ueQk-Y0g0J2S9e9Tszz148/edit?gid=1888221568#gid=1888221568"
+
+
