created ebi2 and added 2008-2017 to the berkeley centric

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -14,4 +14,6 @@
    [connections.gsheets_berkeley]
    spreadsheet = "https://docs.google.com/spreadsheets/d/1l4rfoVXf4hEED5JMQRtG6ueQk-Y0g0J2S9e9Tszz148/edit?gid=1888221568#gid=1888221568"
 
-
+   [connections.gsheets_ebi2]
+   spreadsheet = "https://docs.google.com/spreadsheets/d/1l4rfoVXf4hEED5JMQRtG6ueQk-Y0g0J2S9e9Tszz148/edit?gid=1029064839#gid=1029064839"
+   
